--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "webpack-dev-server --progress --profile --colors",
         "build": "webpack",
-        "comb": "./node_modules/.bin/csscomb static/style/*",
+        "comb": "./node_modules/.bin/csscomb src/styles/*.css",
         "lint": "eslint --ext=js src/index.js",
         "precommit": "npm run lint && npm run comb",
         "prepush": "npm build"
