--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "scripts": {
         "start": "webpack-dev-server --progress --profile --colors",
         "build": "webpack",
-        "comb": "./node_modules/.bin/csscomb src/styles/*.css",
         "lint": "eslint --ext=js src/index.js",
-        "precommit": "npm run lint && npm run comb",
+        "precommit": "npm run lint && npm run build",
         "prepush": "npm build"
     },
     "keywords": [],
@@ -19,7 +18,6 @@
         "babel-loader": "^7.1.2",
         "copy-webpack-plugin": "^4.3.1",
         "css-loader": "^0.28.8",
-        "csscomb": "^4.2.0",
         "eslint": "^4.14.0",
         "eslint-config-yandex": "^1.0.6",
         "file-loader": "^1.1.6",
