--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "start": "webpack-dev-server --progress --profile --colors",
         "build": "webpack",
         "lint": "eslint --ext=js src/index.js",
-        "precommit": "npm run lint && npm run build",
-        "prepush": "npm build"
+        "precommit": "npm run lint && npm run build"
     },
     "keywords": [],
     "author": "",
